# simple-prolog

./: .gitignore  Cargo.toml  README.md
assets/: base.txt  complex.txt  mr_gpt_essay_simple.txt  pronoun_test.txt  query_demo.txt  robot.txt  simple.txt
scripts/: tsv_parser.py
src/: main.rs
src/app/: database_editor.rs  interactive_parser.rs  interface.rs  logger.rs  mod.rs  query_engine.rs
src/app/database/: database.rs  mod.rs  sentences.rs  words.rs
src/app/parser/: interactive_converter.rs  mod.rs  parser.rs  pattern_matcher.rs  pronoun_resolver.rs
