[package]
name = "simple-prolog"
version = "0.1.0"
edition = "2024"
default-run = "simple_prolog"

[[bin]]
name = "simple_prolog"
path = "src/main.rs"

[[bin]]
name = "convert_db"
path = "src/bin/convert_db.rs"

[dependencies]
bincode = "1.3"
chumsky = "0.11.1"
eframe = "0.28"
egui = "0.28"
image = "0.25"
rayon = "1.10"
regex = "1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"
image = "0.25"